modified index page and subscribe page with article template

--- a/subscribe.html
+++ b/subscribe.html
@@ -46,6 +46,7 @@
     <link href="subscribe_styles.css" rel="stylesheet">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Esteban&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     
@@ -56,10 +57,10 @@
 
     <div class="form-floating">
         <div class="form-floating">
-            <input type="text" class="form-control top" placeholder="First Name" name="first">
+            <input type="text" class="form-control" placeholder="FirstName" name="first">
           </div>
         <div class="form-floating">
-           <input type="text" class="form-control middle" placeholder="Last Name" name="last">
+           <input type="text" class="form-control middle" placeholder="LastName" name="last">
         </div>
       <input type="email" class="form-control bottom" placeholder="name@example.com" name="useremail">
     </div>
